# TextNormalizer

./: LICENSE  README.md
cpp/: TextNormalizer.cpp  TextNormalizer.h
csharp/: TextNormalizer.cs
go/: text_normaliter_test.go  text_normalizer.go
js/: textNormalizer.js
python/: text_normalizer.py
r/: text_normalizer.R
rust/: Cargo.toml  text_normalizer.rs
swift/: TextNormalizer.swift
typescript/: textNormalizer.ts
